# util

./: CMakeLists.txt
include/util/: abort.hpp  debug.hpp  defer.hpp  macro.hpp  slot.hpp  storage.hpp  type_traits.hpp  utility.hpp
include/util/debug/: assert.hpp  assume.hpp  run.hpp  unreachable.hpp
include/util/memory/: page_allocation.hpp  view.hpp
include/util/refer/: ref.hpp  ref_count.hpp
src/: abort.cpp  assert.cpp  assume.cpp  page_allocation.cpp  unreachable.cpp
src/internal/os/posix/: page_allocation.hpp
